--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -11,5 +11,5 @@ jobs:
 
     steps:
       - name: Say Hello
-        run: echo "🎉 Runner đang hoạt động!"
+        run: echo "🎉 Runner đang hoạt động! oke212"
 
