--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -1,15 +1,29 @@
-name: Test Self-hosted Runner
+name: PR Agent
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
-  test-run:
+  run-pr-agent:
     runs-on: self-hosted
 
-    steps:
-      - name: Say Hello
-        run: echo "🎉 Runner đang hoạt động! oke212"
+    container:
+      image: anhdt8490/pr-ai-agent:latest
+      options: --entrypoint ""
 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Run PR Agent
+        env:
+          PR_URL: ${{ github.event.pull_request.html_url }}
+          config__git_provider: github
+          github__token: ${{ secrets.GITHUB_TOKEN }}
+          openai__key: ${{ secrets.OPENAI_KEY }}
+          openai__api_base: ${{ secrets.OPENAI_API_BASE }}
+        run: |
+          python -m pr_agent.cli --pr_url="$PR_URL" describe
+          python -m pr_agent.cli --pr_url="$PR_URL" review -i
+          python -m pr_agent.cli --pr_url="$PR_URL" improve
